--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -12,9 +12,9 @@
 }
 
 .header{
-    /* position: fixed;
+    position: fixed;
     top: 0; left: 0; right: 0;
-    z-index: 10000;*/
+    z-index: 1000;
     background: #000000;
     display: flex;
     align-items: center;
