--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,14 @@
 <div class="container">
     <div class="row">
         <app-header></app-header>
+        
+    <!-- </div>
+    <div class="row"> -->
+     <div class="outlet">
+        <router-outlet></router-outlet>
+     </div>   
+    
     </div>
-    <router-outlet></router-outlet>
     <!-- <div class="row">
 
     </div> -->
