--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<p style="color:#fff">dashboard works!</p>
-<p>Welcome {{user.name}} {{user.bookingId}}</p>
+<!-- <p style="color:#fff">dashboard works!</p>
+<p>Welcome {{user.name}} {{user.bookingId}}</p> -->
 
 <div class="row col-lg-12">
   <!-- <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-sm-offset-1 col-md-offset-2"> -->
@@ -9,25 +9,25 @@
       <a href="https://rzp.io/l/PsGzNu6" class="btn">BOOK NOW</a>
     </div>
 
-    <div class="swiper-container home-slider">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="assets/slide-1.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/slide-2.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/slide-3.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/slide-4.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/slide-5.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/slide-6.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/slide-7.png" alt=""></div>
-      </div>
-    </div>
+    <swiper-container class="home-slider" effect="cards" loop="true" navigation="true" 
+      autoplay="true" speed="500" pagination="true">
+      <swiper-slide><img src="assets/slide-1.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide-2.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide-3.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide-4.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide-5.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide-6.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide-7.png" alt=""></swiper-slide>
+    </swiper-container>
   </section>
   <!-- </div> -->
 
   <!-- service section start -->
+  <!-- <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-sm-offset-1 col-md-offset-2"> -->
   <section class="service" id="service">
     <h1 class="heading"> our <span>services</span></h1>
     <div class="box-container">
-      <div class="box">
+      <div class="box ">
         <!-- <i class="fa fa-map-marker-alt"></i> -->
         <h3>BOOK A SHOW</h3>
         <p>From corporate events to festivals,colleges and private parties, our talented musicians
@@ -48,7 +48,8 @@
       <div class="box">
         <!-- <i class="fa fa-music"></i> -->
         <h3>UPCOMING EVENTS</h3>
-        <p>MSO curating the best of all till date.Tenting, movie night, workshops and more on June 15 at Hamsah Organic
+        <p>MSO curating the best of all till date.Tenting, movie night, workshops and more on June 15 at Hamsah
+          Organic
           Farm . Book your slots now </p>
         <a href="https://rzp.io/l/PsGzNu6" class="btn">BOOK NOW</a>
       </div>
@@ -62,6 +63,7 @@
     </div>
 
   </section>
+  <!-- </div> -->
   <!-- service section end -->
 
   <!-- about start -->
@@ -237,60 +239,58 @@
   <!-- review start -->
   <section class="review" id="review">
     <h1 class="heading">client's <span>review</span></h1>
-    <div class="review-slider swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide box">
-          <i class="fas fa-quote-right"></i>
-          <div class="user">
-            <img src="assets/pic-1.png" alt="">
-            <div class="uer-info">
-              <h3>Rahul Ananth</h3>
-              <span>Corporate Employee</span>
-            </div>
+    <swiper-container class="review-slider" slides-per-view="3" mousewheel-force-to-axis="true" speed="500"
+      pagination="true" loop="true" grab-cursor="true" autoplay="true">
+      <swiper-slide class="box">
+        <i class="fas fa-quote-right"></i>
+        <div class="user">
+          <img src="assets/pic-1.png" alt="">
+          <div class="uer-info">
+            <h3>Rahul Ananth</h3>
+            <span>Corporate Employee</span>
           </div>
-          <p>Great way to spend a Sunday evening! Kudos to everyone who organized the event. Onwards and upwards from
-            here!</p>
         </div>
+        <p>Great way to spend a Sunday evening! Kudos to everyone who organized the event. Onwards and upwards from
+          here!</p>
+      </swiper-slide>
+      
+      <swiper-slide class="box">
+        <i class="fas fa-quote-right"></i>
+        <div class="user">
+          <img src="assets/pic-1.png" alt="">
+          <div class="uer-info">
+            <h3>Sethu Manuel</h3>
+            <span>IT Consultant</span>
+          </div>
+        </div>
+        <p>Amazing performance,really liked the concept of jamming where you involve all the audience,good to see the kind of friendship vibe you create around.</p>
+      </swiper-slide>
 
-        <div class="swiper-slide box">
-          <i class="fas fa-quote-right"></i>
-          <div class="user">
-            <img src="assets/pic-1.png" alt="">
-            <div class="uer-info">
-              <h3>Sethu Manuel</h3>
-              <span>IT Consultant</span>
-            </div>
+      <swiper-slide class="box">
+        <i class="fas fa-quote-right"></i>
+        <div class="user">
+          <img src="assets/pic-2.png" alt="">
+          <div class="uer-info">
+            <h3>Julia Anil</h3>
+            <span>College Student</span>
           </div>
-          <p>Amazing performance,really liked the concept of jamming where you involve all the audience,good to see the
-            kind of friendship vibe you create around .
-          </p>
         </div>
-        <div class="swiper-slide box">
-          <i class="fas fa-quote-right"></i>
-          <div class="user">
-            <img src="assets/pic-2.png" alt="">
-            <div class="uer-info">
-              <h3>Julia Anil</h3>
-              <span>College Student</span>
-            </div>
-          </div>
-          <p>Absolutely loved the vibe and energy!. The event was a blast,and we are already looking for the next one
-          </p>
-        </div>
-        <div class="swiper-slide box">
-          <i class="fas fa-quote-right"></i>
-          <div class="user">
-            <img src="assets/pic-2.png" alt="">
-            <div class="uer-info">
-              <h3>Aiswarya</h3>
-              <span>Student</span>
-            </div>
-          </div>
-          <p>Loved every bit of the show! Looking forward to more of time to make some ochha !!</p>
-        </div>
-      </div>
-    </div>
+        <p>Absolutely loved the vibe and energy!. The event was a blast,and we are already looking for the next one</p>
+      </swiper-slide>
 
+      <swiper-slide class="box">
+        <i class="fas fa-quote-right"></i>
+        <div class="user">
+          <img src="assets/pic-2.png" alt="">
+          <div class="uer-info">
+            <h3>Aiswarya</h3>
+            <span>Student</span>
+          </div>
+        </div>
+        <p>Loved every bit of the show! Looking forward to more of time to make some ochha !!</p>
+      </swiper-slide>
+
+    </swiper-container>
   </section>
   <!-- review end -->
 
