Added sample shop template

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
   <section class="home" id="home">
     <div class="content">
       <h3>the community you didn't know <span> you needed </span></h3>
-      <a href="https://rzp.io/l/PsGzNu6" class="btn">BOOK NOW</a>
+      <a (click)="goToShopPage()" class="btn">BOOK NOW</a>
     </div>
 
     <swiper-container class="home-slider" effect="cards" loop="true" navigation="true" 
