--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,39 +1,46 @@
 <p>registration works!</p>
 <div class="container">
     <div class="col-xs-12 col-sm-12 col-md-8 col-sm-offset-1 col-md-offset-2">
-        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="registration-form">
             <div class="form-group">
                 <label for="userName">Name:</label>
                 <input type="text" id="userName" formControlName="userName" class="form-control">
             </div>
             <div class="form-group">
-                <label for="bookingId">Booking Id:</label>
-                <input type="text" id="bookingId" formControlName="bookingId" class="form-control">
+                <label for="description">Description:</label>
+                <input type="text" id="description" formControlName="description" class="form-control">
             </div>
             <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" formControlName="email" class="form-control">
+                <label for="price">Price:</label>
+                <input type="number" id="price" formControlName="price" class="form-control">
                 <!-- <span *ngIf="registerForm.get('email').errors['required'] && registerForm.get('email').touched" class="help-block">*Information Required</span>
                 <span *ngIf="registerForm.get('email').errors['email']" class="help-block">Please enter a valid email</span> -->
             </div>
             <div class="form-group">
-                <label for="noOfTickets">Number of Tickets</label>
+                <label for="noOfTickets">Number of Tickets:</label>
                 <input type="number" id="noOfTickets" formControlName="noOfTickets" class="form-control">
-                <span *ngIf="!registerForm.get('noOfTickets').valid && registerForm.get('noOfTickets').touched" class="help-block">Minimum nomber of tickets should be 1</span>
-            </div><br>  
+                <span *ngIf="!registerForm.get('noOfTickets').valid && registerForm.get('noOfTickets').touched"
+                    class="help-block">Minimum nomber of tickets should be 1</span>
+            </div><br>
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
     </div>
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-8 col-sm-offset-1 col-md-offset-2">
-            <ul class="list-group" *ngIf="ticketList.length >=1">
-                <li class="" *ngFor="let ticket of ticketList">
-                    <p>{{ ticket.name }}</p>
-                    <p>{{ ticket.email }}</p>
-
-                </li>
-
-            </ul>
-        </div>
+    <div *ngIf="productList.length >=1" class=" row col-lg-12 col-sm-offset-1 col-md-offset-2 p-5">
+        <mat-card class="product-card col-lg-3 col-md-12 col-xs-12 mr-2" *ngFor="let product of productList">
+            <mat-card-header>
+                <div mat-card-avatar class="product-header-image"></div>
+                <mat-card-title>{{product.title}}</mat-card-title>
+                <mat-card-subtitle>Rs. 499</mat-card-subtitle>
+            </mat-card-header>
+            <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                    alt="Photo of a Shiba Inu"> -->
+            <mat-card-content>
+                <p>{{product.description}}</p>
+            </mat-card-content>
+            <mat-card-actions align="end">
+                <button class="btn btn-secondary mr-2" (click)="onEdit()">Edit</button>
+                <button class="btn btn-danger" (click)="onDelete(product._id)">Delete</button>
+                </mat-card-actions>
+        </mat-card>
     </div>
 </div>
