--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -1,3 +1,16 @@
+.btn-primary {
+    background: #E2E132;
+}
+
+.btn-secondary {
+    background: rgb(95, 95, 177);
+}
+
+.mso-mr-2 {
+    margin-right: 2rem;
+}
+
+
 .product-card {
     max-width: 100%;
     margin-bottom: 10px;
@@ -23,5 +36,38 @@
 
 .example-button-container .mat-mdc-button-base {
     margin: 8px 8px 8px 0;
+}
+
+mat-card-actions input {
+    font-size: large;
+    width: 50px;
+    height: 50px;
+    background: none;
+    color: #fff;
+    margin-right: 5px;
+    margin-left: 5px;
+    padding: 5px;
+}
+
+.summary-container {
+    background: #fff;
+}
+
+.form-group {
+    margin-bottom: 5px;
+}
+
+.form-group label {
+    color: #fff;
+    font-size: large;
+}
+
+.form-group input {
+    font-size: large;
+}
+
+.payment-form {
+    color: #fff;
+    font-size: medium;
 }
   
