--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,7 +1,7 @@
 <p style="color:#fff">shop works!</p>
 
 <div class="row col-lg-12">
-    
+
 
     <div class="row summary-container col-lg-12">
         <label>Rohith Chandra</label>
@@ -67,16 +67,17 @@
                     <ul class="list-group" *ngIf="ticket.shopCart.length >=1">
                         <li class="" *ngFor="let prodItem of ticket.shopCart">
                             <p>{{ prodItem.name }} - {{ prodItem.price }}</p>
-                        </li>        
-                    </ul>  
+                        </li>
+                    </ul>
                     <ul>
                         <li> GST (18%):</li>
                         <li> Total Amount : {{totalAmount}}</li>
-                    </ul>                
+                    </ul>
                     <br>
                     <div>
                         <button mat-button matStepperPrevious class="btn btn-secondary mso-mr-2">Back</button>
-                        <button mat-button matStepperNext class="btn btn-primary" (click)="createRazorpayOrder()">Next</button>
+                        <button mat-button matStepperNext class="btn btn-primary"
+                            (click)="createRazorpayOrder()">Next</button>
                     </div>
                 </form>
             </mat-step>
@@ -91,17 +92,28 @@
                                 <mat-card-title>Success</mat-card-title>
                                 <mat-card-subtitle>Rs. 499</mat-card-subtitle>
                             </mat-card-header>
-                            <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-                                alt="Photo of a Shiba Inu"> -->
-                            <mat-card-content>
-                                <p>Notes</p>
-                            </mat-card-content>
-                            
+                            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                                alt="Photo of a Shiba Inu">
+                                <mat-card-content>
+                                    <ul class="list-group list-group-numbered">
+                                        <li class="list-group-item d-flex justify-content-between align-items-start">
+                                            <div class="ms-2 me-auto">
+                                                <div class="fw-bold">Mr. {{transactionDetails.payload.name}}</div>
+                                                {{transactionDetails.payload.email}}
+                                                {{transactionDetails.payload.phone}}
+                                                Ticket Id: {{transactionDetails.payload._id}}
+                                                Payment Id: {{transactionDetails.payload.paymentId}}
+                                                Total Amount : Rs. {{transactionDetails.payload.amount}}
+                                                Purchased At: {{transactionDetails.payload.createdAt}}
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </mat-card-content>
                         </mat-card>
                         <mat-card class="failed-card">
                             <mat-card-header>
                                 <div mat-card-avatar class="success-header-image"></div>
-                                <mat-card-title>Success</mat-card-title>
+                                <mat-card-title>Booking Failed</mat-card-title>
                                 <mat-card-subtitle>Rs. 499</mat-card-subtitle>
                             </mat-card-header>
                             <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
@@ -109,7 +121,7 @@
                             <mat-card-content>
                                 <p>Notes</p>
                             </mat-card-content>
-                            
+
                         </mat-card>
                     </div>
                     <button mat-button matStepperPrevious class="btn btn-secondary">Back</button>
