refined ticket display

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="header">
   <img src="assets/logo.png" class="headlogo">
-  <a href="#" class="logo"><span>MAKE SOME O</span>छा</a>  
+  <a href="#" routerLink="/dashboard" class="logo"><span>MAKE SOME O</span>छा</a>  
 
   <div class="spacer"></div>       
     <a mat-button class="active" routerLink="/dashboard" *ngIf="isAuthenticated">Dashboard</a>
