--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
   <div class="spacer"></div>       
     <a mat-button class="active" routerLink="/dashboard" *ngIf="isAuthenticated">Dashboard</a>
     <a mat-button [routerLink]="['/register']" *ngIf="isAuthenticated">Register</a>
+    <a mat-button [routerLink]="['/tickets']" *ngIf="isAuthenticated">Tickets</a>
     <a mat-button [routerLink]="['/admin']" *ngIf="userRole === 'admin'">Admin</a>
     <a mat-button class="active" routerLink="/login" *ngIf="!isAuthenticated">Login</a>
     <a mat-button class="active" (click)="onLogOut()" *ngIf="isAuthenticated">Logout</a>
