--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 /* html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 
-@import url('http://fonts.googleapis.com/css2?family=Nunito:wght@200;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;600;700&display=swap');
 
 /* media queries */
 
