--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,13 +11,13 @@
 
     <swiper-container class="home-slider" effect="cards" loop="true" navigation="true" 
       autoplay="true" speed="500" pagination="true">
-      <swiper-slide><img src="assets/slide-1.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/slide-2.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/slide-3.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/slide-4.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/slide-5.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/slide-6.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/slide-7.png" alt=""></swiper-slide>
+      <swiper-slide><img src="https://angular.io/assets/images/logos/angular/angular.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide2.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide3.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide4.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide5.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide6.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide7.png" alt=""></swiper-slide>
     </swiper-container>
   </section>
   <!-- </div> -->
@@ -72,7 +72,7 @@
 
     <div class="row">
       <div class="image">
-        <img src="assets/about-img.png" alt="">
+        <img src="assets/aboutimg.png" alt="">
       </div>
       <div class="content">
         <h3>MAKE SOME Oछा WITH US</h3>
@@ -95,7 +95,7 @@
     <div class="box-container">
 
       <div class="box">
-        <img src="assets/g-1.png" alt="">
+        <img src="assets/g1.png" alt="">
         <h3 class="title">Church Street Jamming</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -105,7 +105,7 @@
       </div>
 
       <div class="box">
-        <img src="assets/g-2.png" alt="">
+        <img src="assets/g2.png" alt="">
         <h3 class="title">Just BLR</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -115,7 +115,7 @@
       </div>
 
       <div class="box">
-        <img src="assets/g-3.png" alt="">
+        <img src="assets/g3.png" alt="">
         <h3 class="title">Byg Brewski Brewing Company</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -125,7 +125,7 @@
       </div>
 
       <div class="box">
-        <img src="assets/g-4.png" alt="">
+        <img src="assets/g4.png" alt="">
         <h3 class="title">Kammanahalli</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="box">
-        <img src="assets/g-5.png" alt="">
+        <img src="assets/g5.png" alt="">
         <h3 class="title">Peck x Oछा</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -145,7 +145,7 @@
       </div>
 
       <div class="box">
-        <img src="assets/g-6.png" alt="">
+        <img src="assets/g6.png" alt="">
         <h3 class="title">Bharatam FISAT College Fest</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -155,7 +155,7 @@
       </div>
 
       <div class="box">
-        <img src="assets/g-7.png" alt="">
+        <img src="assets/g7.png" alt="">
         <h3 class="title">Zariyaa Happiness Festival- HCL</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -165,7 +165,7 @@
       </div>
 
       <div class="box">
-        <img src="assets/g-8.png" alt="">
+        <img src="assets/g8.png" alt="">
         <h3 class="title">One with Bangalore Malayalis</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -175,7 +175,7 @@
       </div>
 
       <div class="box">
-        <img src="assets/g-9.png" alt="">
+        <img src="assets/g9.png" alt="">
         <h3 class="title">Our Audience</h3>
         <div class="icons">
           <a href="#" class="fas fa-heart"></a>
@@ -244,7 +244,7 @@
       <swiper-slide class="box">
         <i class="fas fa-quote-right"></i>
         <div class="user">
-          <img src="assets/pic-1.png" alt="">
+          <img src="assets/pic1.png" alt="">
           <div class="uer-info">
             <h3>Rahul Ananth</h3>
             <span>Corporate Employee</span>
@@ -257,7 +257,7 @@
       <swiper-slide class="box">
         <i class="fas fa-quote-right"></i>
         <div class="user">
-          <img src="assets/pic-1.png" alt="">
+          <img src="assets/pic1.png" alt="">
           <div class="uer-info">
             <h3>Sethu Manuel</h3>
             <span>IT Consultant</span>
@@ -269,7 +269,7 @@
       <swiper-slide class="box">
         <i class="fas fa-quote-right"></i>
         <div class="user">
-          <img src="assets/pic-2.png" alt="">
+          <img src="assets/pic2.png" alt="">
           <div class="uer-info">
             <h3>Julia Anil</h3>
             <span>College Student</span>
@@ -281,7 +281,7 @@
       <swiper-slide class="box">
         <i class="fas fa-quote-right"></i>
         <div class="user">
-          <img src="assets/pic-2.png" alt="">
+          <img src="assets/pic2.png" alt="">
           <div class="uer-info">
             <h3>Aiswarya</h3>
             <span>Student</span>
