--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,10 +12,10 @@
     <swiper-container class="home-slider" effect="cards" loop="true" navigation="true" 
       autoplay="true" speed="500" pagination="true">
       <swiper-slide><img src="https://angular.io/assets/images/logos/angular/angular.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/images/slide1.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/images/slide2.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/images/slide3.png" alt=""></swiper-slide>
-      <swiper-slide><img src="assets/images/slide4.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/images/slide01.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/images/slide02.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/images/slide03.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/images/slide04.png" alt=""></swiper-slide>
       <swiper-slide><img src="assets/slide6.png" alt=""></swiper-slide>
       <swiper-slide><img src="assets/slide7.png" alt=""></swiper-slide>
     </swiper-container>
@@ -72,7 +72,7 @@
 
     <div class="row">
       <div class="image">
-        <img src="assets/images/aboutimg.png" alt="">
+        <img src="assets/images/aboutimg01.png" alt="">
       </div>
       <div class="content">
         <h3>MAKE SOME Oछा WITH US</h3>
